[package]
name = "squashfs-ng"
version = "0.1.1"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]
edition = "2018"

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
lazy_static = "1.4"
libc = "0.2"
memmap = "0.7"
num_cpus = "1.13"
num-traits = "0.2"
num-derive = "0.3"
owning_ref = "0.4"
thiserror = "1.0"
walkdir = "2.3"
xattr = "0.2"
