[package]
name = "squashfs-ng"
version = "0.1.1"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]
edition = "2021"
description = "High-level Rust wrapper for squashfs-tools-ng"
readme = "readme.md"
documentation = "https://docs.rs/squashfs-ng"
repository = "https://github.com/showermat/squashfs-ng-rs"
license = "Apache-2.0"
categories = ["compression", "filesystem"]

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
lazy_static = "1.4"
libc = "0.2"
memmap = "0.7"
num_cpus = "1.13"
num-traits = "0.2"
num-derive = "0.3"
owning_ref = "0.4"
thiserror = "1.0"
walkdir = "2.3"
xattr = "0.2"
